# layout_design

./: .gitignore  CMakeLists.txt  format.sh  test.sh
.cache/clangd/index/: common.hpp.8E36DAD69B4F57F4.idx  file_reader.cpp.043B470E57C649F2.idx  file_reader.hpp.56B089F65D98BD83.idx  main.cpp.812A6379B30C579E.idx  myplace.hpp.C59B881B77BC9198.idx  objects.hpp.7F0B05F8CB2247F1.idx  placedata.cpp.67E9644D986921CE.idx  placedata.hpp.47C1796EE52894E0.idx
include/: common.hpp  file_reader.hpp  myplace.hpp  objects.hpp  placedata.hpp
src/: file_reader.cpp  main.cpp  placedata.cpp
